# decode

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CITATION.cff  LICENSE  Pipfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: decode.assign.doctree  decode.convert.doctree  decode.core.doctree  decode.correct.doctree  decode.doctree  decode.fit.doctree  decode.io.doctree  decode.load.doctree  decode.logging.doctree  decode.make.doctree  decode.models.doctree  decode.plot.doctree  decode.qlook.doctree  decode.select.doctree  decode.stats.doctree  decode.utils.doctree  modules.doctree
.github/: CODE_OF_CONDUCT.md
.github/workflows/: docs.yaml  gh-pages.yaml  gh-pages.yml  pypi.yaml  pypi.yml  test.yml  tests.yaml  tests.yml
_apidoc/: decode.assign.html  decode.convert.html  decode.core.html  decode.correct.html  decode.fit.html  decode.html  decode.io.html  decode.load.html  decode.logging.html  decode.make.html  decode.models.html  decode.plot.html  decode.qlook.html  decode.select.html  decode.stats.html  decode.utils.html  modules.html
_modules/: index.html
_modules/decode/: assign.html  convert.html  core.html  correct.html  fit.html  load.html  logging.html  make.html  plot.html  qlook.html  select.html  stats.html  utils.html
_modules/decode/core/array/: decorators.html  functions.html
_modules/decode/core/cube/: functions.html
_modules/decode/io/: functions.html
_modules/decode/models/: functions.html
_modules/decode/plot/: functions.html
_sources/: index.md.txt
_sources/_apidoc/: decode.assign.rst.txt  decode.convert.rst.txt  decode.core.rst.txt  decode.correct.rst.txt  decode.fit.rst.txt  decode.io.rst.txt  decode.load.rst.txt  decode.logging.rst.txt  decode.make.rst.txt  decode.models.rst.txt  decode.plot.rst.txt  decode.qlook.rst.txt  decode.rst.txt  decode.select.rst.txt  decode.stats.rst.txt  decode.utils.rst.txt
decode/: __init__.py  array.py  assign.py  convert.py  correct.py  cube.py  fit.py  io.py  load.py  logging.py  make.py  plot.py  qlook.py  select.py  stats.py  utils.py
decode/array/: classes.py  decorators.py  functions.py
decode/core/: __init__.py  classes.py  decorators.py  functions.py
decode/core/array/: classes.py  decorators.py  functions.py
decode/core/cube/: __init__.py  classes.py  functions.py
decode/data/: alma_atm.txt  fitsinfo.toml  fitsinfo.yaml
decode/io/: __init__.py  functions.py
decode/joke/: functions.py
decode/logging/: __init__.py  functions.py
decode/models/: functions.py
decode/plot/: __init__.py  functions.py
decode/ql/: array.py  models.py
decode/utils/: __init__.py
decode/utils/misc/: functions.py
decode/utils/miscellaneous/: __init__.py  functions.py
decode/utils/multiprocessing/: __init__.py  classes.py
decode/utils/ndarray/: functions.py
docs/: .buildinfo  build  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/decode/: core.html  logging.html
docs/_modules/decode/core/array/: decorators.html  functions.html
docs/_modules/decode/core/cube/: functions.html
docs/_modules/decode/io/: functions.html
docs/_modules/decode/joke/: functions.html
docs/_modules/decode/models/: functions.html
docs/_modules/decode/plot/: functions.html
docs/_modules/xarray/core/: combine.html
docs/_project/: build.sh  conf.py  index.rst  testbuild.sh
docs/_project/apis/: decode.core.rst  decode.logging.rst  decode.models.rst  decode.rst  decode.utils.rst
docs/_sources/apis/: decode.core.rst.txt  decode.io.rst.txt  decode.joke.rst.txt  decode.logging.rst.txt  decode.models.rst.txt  decode.plot.rst.txt  decode.rst.txt  decode.utils.rst.txt  modules.rst.txt
docs/apis/: decode.core.html  decode.html  decode.io.html  decode.joke.html  decode.logging.html  decode.models.html  decode.plot.html  decode.utils.html  modules.html  setup.html
etc/: builddocs  configure  distribute
tests/: test_assign.py  test_convert.py  test_io.py  test_load.py  test_metadata.py  test_plot.py  test_root.py  test_select.py  test_stats.py  test_utils.py
