[tool.poetry]
name = "decode"
version = "2024.11.0"
description = "DESHIMA code for data analysis"
authors = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Juri Yamanaka <j.yamanaka@a.phys.nagoya-u.ac.jp>",
    "Shinji Fujita <s-fujita@ism.ac.jp>",
]
keywords = [
    "astronomy",
    "data-analysis",
    "deshima",
    "spectroscopy",
    "submillimeter",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/decode/"
documentation = "https://deshima-dev.github.io/decode/"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = "^6.0"
dems = "^2024.7.2"
matplotlib = "^3.8"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
scipy = "^1.12"
xarray = "^2024.1"
zarr = "^2.17"
fire = "^0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
ipython = "^8.18"
myst-parser = "^3.0"
pydata-sphinx-theme = "^0.16"
pyright = "^1.1"
pytest = "^8.3"
sphinx = "^7.3"

[tool.poetry.scripts]
decode-qlook = "decode.qlook:main"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
