[project]
name = "decode"
version = "2025.6.1"
description = "DESHIMA code for data analysis"
readme = "README.md"
keywords = [
    "astronomy",
    "data-analysis",
    "deshima",
    "spectroscopy",
    "submillimeter",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "astropy>=6,<8",
    "dask>=2024,<2026",
    "dems>=2025.6,<2026.0",
    "fire>=0.5,<1.0",
    "matplotlib>=3,<4",
    "ndtools>=1,<2",
    "numpy>=1.23,<3.0",
    "pandas>=2,<3",
    "pandas-stubs>=2,<3",
    "scikit-learn>=1,<2",
    "scipy>=1,<2",
    "tomli_w>=1,<2",
    "xarray>=2024,<2026",
    "zarr>=2,<3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[[project.authors]]
name = "Juri Yamanaka"
email = "j.yamanaka@a.phys.nagoya-u.ac.jp"

[[project.authors]]
name = "Shinji Fujita"
email = "s-fujita@ism.ac.jp"

[project.license]
file = "LICENSE"

[project.scripts]
decode-qlook = "decode.qlook:main"

[project.urls]
homepage = "https://deshima-dev.github.io/decode"
repository = "https://github.com/deshima-dev/decode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25,<26",
    "ipython>=8,<10",
    "myst-parser>=3,<5",
    "pydata-sphinx-theme>=0.15,<1.0",
    "pyright>=1,<2",
    "pytest>=8,<9",
    "sphinx>=7,<9",
]

[tool.pyright]
typeCheckingMode = "basic"
