[metadata]
name = decode
version = 0.5.4
author = DESHIMA software team
author_email = taniguchi@a.phys.nagoya-u.ac.jp
url = https://github.com/deshima-dev/decode
description = DESHIMA code for data analysis
long_description = file:README.md
long_description_content_type = text/markdown
keywords = astronomy, submillimeter, spectroscopy, deshima, data-analysis
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
include_package_data = True
packages =
    decode
    decode.core
    decode.core.array
    decode.core.cube
    decode.io
    decode.logging
    decode.plot
    decode.models
    decode.utils
    decode.utils.misc
    decode.utils.ndarray
install_requires =
    numpy
    scipy
    xarray
    astropy
    matplotlib
    scikit-learn
    netCDF4
    pyyaml
    tqdm

[options.package_data]
decode = data/*.yaml
